refactor the build to support new features of sbt-idea-plugin #SCL-13635
the changes mainly include automatic packaging of external dependencies,
artifact structure being defined by dependency structure of the projects,
fine-tuning dependency mappings and extracting some common code into the
plugin